--- a/Frontend/HTML/1-Intro.html
+++ b/Frontend/HTML/1-Intro.html
@@ -6,8 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>THis is heading</h1>
-    <p>This is paragraph</p>
     
+<section>
+    <div>
+        <h1>Login</h1>
+    </div>
+    <div>
+        <div>
+        <label for="">Username</label>
+        <input type="text" placeholder="Type your username">
+        <hr>
+        <label for="">Password</label>
+        <input type="text" name="" id="" placeholder="Type your password">
+
+    </div>
+</section>
+
 </body>
 </html>
